[package]
name = "axum-pass"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Simple password authorization middleware for axum."
documentation = "https://github.com/misaka10987/axum-pass"
homepage = "https://github.com/misaka10987/axum-pass"
repository = "https://github.com/misaka10987/axum-pass"
readme = "README.md"
keywords = ["axum", "password", "middleware"]
license = "MIT"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["cookie"] }
http = "1.3.1"
http-auth-basic = "0.3.5"
simple-safe = "0.2.2"
tracing = "0.1.41"
